fix header overflow

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1,6 +1,6 @@
 /* TileMill masthead override */
 #tilemill-logo {
-  width:125px;
+  width:110px;
   height:60px;
   display:block;
   text-indent:-999px;
